--- a/index.html
+++ b/index.html
@@ -1,13 +1,319 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<title>Document</title>
+		<link rel="stylesheet" href="./css/bootstrap.min.css" />
+		<link rel="stylesheet" href="./css/main.css" />
+	</head>
+	<body>
+		<heaader class="site-header">
+			<div class="container">
+				<div class="header__inner">
+					<a href="#" class="site-header__logo-link">
+						<img
+							src="./images/logo.svg"
+							alt="site logo icon"
+							class="site-header__logo-img"
+							width="35"
+							height="42"
+						/>
+					</a>
+
+					<nav class="navbar">
+						<ol class="navbar__list">
+							<li class="navbar__item">
+								<a class="navbar__link" href="#"> Home </a>
+							</li>
+
+							<li class="navbar__item">
+								<a class="navbar__link" href="#"> About </a>
+							</li>
+
+							<li class="navbar__item">
+								<a class="navbar__link" href="#"> Offers </a>
+							</li>
+
+							<li class="navbar__item">
+								<a class="navbar__link" href="#"> Services </a>
+							</li>
+
+							<li class="navbar__item navbar__item--active">
+								<a class="navbar__link" href="#">
+									How can we help you?
+								</a>
+							</li>
+						</ol>
+					</nav>
+
+					<button class="burger-btn">
+						<svg
+							width="22"
+							height="20"
+							viewBox="0 0 22 20"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<path
+								d="M0.5 0.666668H21.5V3H0.5V0.666668ZM0.5 8.83333H21.5V11.1667H0.5V8.83333ZM0.5 17H21.5V19.3333H0.5V17Z"
+								fill="black"
+							/>
+						</svg>
+					</button>
+				</div>
+			</div>
+		</heaader>
+
+		<main class="site-main">
+			<section class="hero">
+				<div class="container">
+					<div class="hero__inner">
+						<h1 class="hero__title">Freedom calls.</h1>
+
+						<p class="hero__text">
+							Answer a call from your surfboard. Ask Siri to send
+							a message. Stream your favorite songs on your run.
+							And do it all while leaving your phone behind.
+							Introducing Apple Watch Series 3 with cellular. Now
+							you have the freedom to go with just your watch.
+						</p>
+
+						<button class="hero__btn">Watch the keynote</button>
+					</div>
+				</div>
+			</section>
+
+			<section class="info">
+				<div class="container">
+					<div class="info__inner">
+						<ul class="info__list">
+							<li class="info__item">
+								<h3 class="info__item-title">
+									Know your runs. In and out.
+								</h3>
+
+								<p class="info__item-txt">
+									Train smarter with more in-run stats. Want
+									to compare a run to your last five? Just
+									swipe left. Mark splits by selecting pause
+									or using gestures, like tapping the screen
+									or double-clicking the side button. And get
+									a full post-run report, including elevation.
+								</p>
+
+								<span class="info__span"></span>
+								<span class="info__span"></span>
+								<span class="info__span"></span>
+							</li>
+
+							<li class="info__item">
+								<h3 class="info__item-title">
+									Run in good spirits.
+								</h3>
+
+								<p class="info__item-txt">
+									A little support can go a long way. You can
+									receive encouraging emoji from friends. And
+									reminders triggered by your friends’ shared
+									activity, the current weather, or your own
+									history give you every reason to run.
+								</p>
+
+								<span class="info__span"></span>
+								<span class="info__span"></span>
+								<span class="info__span"></span>
+							</li>
+
+							<li class="info__item">
+								<h3 class="info__item-title">
+									Just do it. Sunday.
+								</h3>
+
+								<p class="info__item-txt">
+									Run every Sunday and see how long you can
+									keep your streak alive. Fuel your run with
+									exclusive Nike+ Run Club playlists on Apple
+									Music.
+								</p>
+
+								<a class="info__link" href="#"> Learn more </a>
+							</li>
+						</ul>
+
+						<div class="hide">
+							<div
+							id="carouselExampleIndicators"
+							class="carousel slide"
+							data-bs-ride="true"
+						>
+							<div class="carousel-indicators">
+								<button
+									type="button"
+									data-bs-target="#carouselExampleIndicators"
+									data-bs-slide-to="0"
+									class="active"
+									aria-current="true"
+									aria-label="Slide 1"
+								></button>
+								<button
+									type="button"
+									data-bs-target="#carouselExampleIndicators"
+									data-bs-slide-to="1"
+									aria-label="Slide 2"
+								></button>
+								<button
+									type="button"
+									data-bs-target="#carouselExampleIndicators"
+									data-bs-slide-to="2"
+									aria-label="Slide 3"
+								></button>
+							</div>
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<h3 class="info__item-title">
+										Know your runs. In and out.
+									</h3>
+
+									<p class="info__item-txt">
+										Train smarter with more in-run stats.
+										Want to compare a run to your last five?
+										Just swipe left. Mark splits by
+										selecting pause or using gestures, like
+										tapping the screen or double-clicking
+										the side button. And get a full post-run
+										report, including elevation.
+									</p>
+
+									<span class="info__span"></span>
+									<span class="info__span"></span>
+									<span class="info__span"></span>
+								</div>
+								<div class="carousel-item">
+									<h3 class="info__item-title">
+										Run in good spirits.
+									</h3>
+
+									<p class="info__item-txt">
+										A little support can go a long way. You
+										can receive encouraging emoji from
+										friends. And reminders triggered by your
+										friends’ shared activity, the current
+										weather, or your own history give you
+										every reason to run.
+									</p>
+
+									<span class="info__span"></span>
+									<span class="info__span"></span>
+									<span class="info__span"></span>
+								</div>
+								<div class="carousel-item">
+									<h3 class="info__item-title">
+										Just do it. Sunday.
+									</h3>
+
+									<p class="info__item-txt">
+										Run every Sunday and see how long you
+										can keep your streak alive. Fuel your
+										run with exclusive Nike+ Run Club
+										playlists on Apple Music.
+									</p>
+
+									<a class="info__link" href="#">
+										Learn more
+									</a>
+								</div>
+							</div>
+							<button
+								class="carousel-control-prev"
+								type="button"
+								data-bs-target="#carouselExampleIndicators"
+								data-bs-slide="prev"
+							>
+								<span
+									class="carousel-control-prev-icon"
+									aria-hidden="true"
+								></span>
+								<span class="visually-hidden">Previous</span>
+							</button>
+							<button
+								class="carousel-control-next"
+								type="button"
+								data-bs-target="#carouselExampleIndicators"
+								data-bs-slide="next"
+							>
+								<span
+									class="carousel-control-next-icon"
+									aria-hidden="true"
+								></span>
+								<span class="visually-hidden">Next</span>
+							</button>
+						</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="band">
+				<div class="container">
+					<div class="band__inner">
+						<div class="band__info">
+							<h2 class="band__title hero__title">
+								Nike Sport Band. Light. Flexible. Breathable.
+							</h2>
+
+							<p class="band__text hero__text">
+								Made from the same durable, lightweight
+								fluoroelastomer as the original Apple Watch
+								Sport Band, the Nike Sport Band reduces weight
+								and improves ventilation via row after row of
+								compression-molded perforations.
+							</p>
+
+							<button class="hero__btn">Buy now</button>
+						</div>
+
+						<img
+							class="band__img"
+							width="400"
+							height="600"
+							src="./images/watch-in-hand.jpg"
+							alt="watch in hand"
+						/>
+					</div>
+				</div>
+			</section>
+		</main>
+
+		<footer class="site-footer">
+			<div class="container">
+				<div class="site-footer__inner">
+					<strong class="site-footer__title">
+						Take control of your health.
+					</strong>
+
+					<p class="site-footer__text">
+						With built-in GPS and altimeter, Apple Watch Nike+ has
+						all the features to help you take your run to the next
+						level. You can even pair your watch wirelessly with
+						compatible gym equipment. And it’s swimproof, so you can
+						take a post-run dip in the pool.
+					</p>
+
+					<button class="site-footer__btn hero__btn">
+						Explore features
+					</button>
+				</div>
+			</div>
+		</footer>
+
+		<script src="./js/bootstrap.min.js"></script>
+	</body>
 </html>
