--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
 									Music.
 								</p>
 
-								<a class="info__link" href="#"> Learn more </a>
+								<a class="info__link" href="#"><svg width="40" height="3" viewBox="0 0 40 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<line y1="1.5" x2="40" y2="1.5" stroke="#EA625C" stroke-width="3"/>
+									</svg>
+									 Learn more </a>
 							</li>
 						</ul>
 
@@ -227,7 +230,10 @@
 									</p>
 
 									<a class="info__link" href="#">
-										Learn more
+										<svg width="40" height="3" viewBox="0 0 40 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<line y1="1.5" x2="40" y2="1.5" stroke="#EA625C" stroke-width="3"/>
+											</svg>
+											Learn more
 									</a>
 								</div>
 							</div>
