--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Document</title>
+		<title>Apple watch</title>
 		<link rel="stylesheet" href="./css/bootstrap.min.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
