--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
 							width="400"
 							height="600"
 							src="./images/watch-in-hand.jpg"
+							srcset="./images/watch-in-hand.jpg 1x, ./images/watch-in-hand@2x.jpg 2x"
 							alt="watch in hand"
 						/>
 					</div>
