--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
-		<heaader class="site-header">
+		<header class="site-header">
 			<div class="container">
 				<div class="header__inner">
 					<a href="#" class="site-header__logo-link">
@@ -70,7 +70,7 @@
 					</button>
 				</div>
 			</div>
-		</heaader>
+		</header>
 
 		<main class="site-main">
 			<section class="hero">
