--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<header class="site-header">
 			<div class="container">
-				<div class="header__inner">
+				<div class="site-header__inner">
 					<a href="#" class="site-header__logo-link">
 						<img
 							src="./images/logo.svg"
@@ -271,11 +271,11 @@
 				<div class="container">
 					<div class="band__inner">
 						<div class="band__info">
-							<h2 class="band__title hero__title">
+							<h2 class="band__title ">
 								Nike Sport Band. Light. Flexible. Breathable.
 							</h2>
 
-							<p class="band__text hero__text">
+							<p class="band__text ">
 								Made from the same durable, lightweight
 								fluoroelastomer as the original Apple Watch
 								Sport Band, the Nike Sport Band reduces weight
@@ -283,7 +283,7 @@
 								compression-molded perforations.
 							</p>
 
-							<button class="hero__btn">Buy now</button>
+							<button class="band__btn">Buy now</button>
 						</div>
 
 						<img
@@ -314,7 +314,7 @@
 						take a post-run dip in the pool.
 					</p>
 
-					<button class="site-footer__btn hero__btn">
+					<button class="site-footer__btn">
 						Explore features
 					</button>
 				</div>
